--- a/assets/main.scss
+++ b/assets/main.scss
@@ -1,3 +1,6 @@
+---
+---
+
 .hero {
   display: flex;
   gap: 40px;
@@ -5,6 +8,7 @@
   margin-top: 40px;
   margin-bottom: 40px;
 }
+
 
 .hero-left {
   text-align: center;
