--- a/assets/main.scss
+++ b/assets/main.scss
@@ -2,6 +2,17 @@
 ---
 
 .hero {
+  padding-top: 3rem;
+}
+
+@media (max-width: 600px) {
+  .hero {
+    padding-top: 4rem;
+  }
+}
+
+
+.hero {
   display: flex;
   gap: 40px;
   align-items: center;
