--- a/assets/main.scss
+++ b/assets/main.scss
@@ -77,6 +77,15 @@
   box-shadow: none !important;
 }
 
+/* ============================= */
+/* HIDE SITE TITLE (NAME) */
+/* ============================= */
+
+.site-title {
+  display: none !important;
+}
+
+
 .site-nav .page-link {
   display: inline-block;
   padding: 0;
