--- a/assets/main.scss
+++ b/assets/main.scss
@@ -90,3 +90,12 @@
   display: inline-block;
   padding: 0;
 }
+
+/* ============================= */
+/* REMOVE FOOTER */
+/* ============================= */
+
+.site-footer {
+  display: none !important;
+}
+
